<resources>
    <string name="app_name">HDRS шкала</string>
    <string name="caption1">Депрессивное настроение</string>
    <string name="q1_1">Мрачный настрой</string>
    <string name="q1_2">Пессимизм в отношении будущего</string>
    <string name="q1_3">Периодический плач</string>
    <string name="q1_4">Частый плач</string>
    <string name="q1_5">Прочие крайние симптомы</string>
    <string name="next1">Далее</string>
    <string name="caption2">Чувство вины</string>
    <string name="q2_1">Самоупреки, чувство что подвел людей</string>
    <string name="q2_2">Идеи вины</string>
    <string name="q2_3">Нынешняя болезнь - наказание</string>
    <string name="q2_4">Бредовые идеи вины</string>
    <string name="q2_5">Галлюцинации вины</string>
    <string name="next2">Далее</string>
    <string name="caption3">Самоубийство</string>
    <string name="q3_1">Чувство, что жизнь не стоит того, чтобы жить</string>
    <string name="q3_2">Желание смерти</string>
    <string name="q3_3">Внезапная попытка самоубийства</string>
    <string name="q3_4">Попытки самоубийства</string>
    <string name="next3">Далее</string>
    <string name="caption4">Бессонница, начальная</string>
    <string name="q4_1">Легкая бессонница. Сон не наступает в течении 2 часов относительно желаемого времени засыпания на фоне легкой социальной или профессиональной дисфункции</string>
    <string name="q4_2">Средняя бессонница. Сон не наступает в течении 3 часов на фоне средней дисфункции</string>
    <string name="q4_3">Тяжелая бессонница. Сон не наступает в течении 4 часов на фоне тяжелой дисфункции.</string>
    <string name="next4">Далее</string>
    <string name="caption5">Бессонница, средняя</string>
    <string name="q5_1">Беспокойный сон</string>
    <string name="q5_2">Пробуждение ночью</string>
    <string name="next5">Далее</string>
    <string name="caption6">Бессонница, поздняя</string>
    <string name="q6_1">Иногда пробуждение в ранние утренние часы и невозможность снова заснуть</string>
    <string name="q6_2">Частые пробуждения в ранние утренние часы и невозможность снова заснуть</string>
    <string name="next6">Далее</string>
    <string name="caption7">Работа и потеря интереса</string>
    <string name="q7_1">Чувство недееспособности</string>
    <string name="q7_2">Вялость и нерешительность</string>
    <string name="q7_3">Потеря интереса к хобби</string>
    <string name="q7_4">Снижение социальной активности, неспособность работать</string>
    <string name="next7">Далее</string>
    <string name="caption8">Задержка развития</string>
    <string name="q8_1">Легкая заторможенность при общении</string>
    <string name="q8_2">Явная заторможенность при общении</string>
    <string name="q8_3">Общение затруднено</string>
    <string name="next8">Далее</string>
    <string name="caption9">Возбуждение</string>
    <string name="q9_1">Некоторые возбуждения вызывают затруднения</string>
    <string name="q9_2">Самые легкие степени возбуждения вызывают значительные затруднения</string>
    <string name="next9">Далее</string>
    <string name="caption10">Психосоматическая тревожность</string>
    <string name="q10_1">Напряжение и раздражительность</string>
    <string name="q10_2">Беспокойство по мелочам</string>
    <string name="q10_3">Настороженное отношение</string>
    <string name="q10_4">Страхи</string>
    <string name="next10">Далее</string>
    <string name="caption11">Соматическая тревожность</string>
    <string name="q11_1">Иногда проблеммы с желудочно-кишечным трактом, одышкой, расстройством желудка, сердцебиением, головными болями, распираторными, мочеполовыми и др. системами</string>
    <string name="q11_2">Частые проблеммы с желудочно-кишечным трактом, одышкой, расстройством желудка, сердцебиением, головными болями, распираторными, мочеполовыми и др. системами</string>
    <string name="next11">Далее</string>
    <string name="caption12">Желудочно-кишечные соматические симптомы</string>
    <string name="q12_1">Иногда потеря аппетита, тяжесть в животе, запоры</string>
    <string name="q12_2">Часто потеря аппетита, тяжесть в животе, запоры</string>
    <string name="next12">Далее</string>
    <string name="caption13">Общие соматические симптомы</string>
    <string name="q13_1">Иногда тяжесть в конечностях, спине или голове, утомляемость</string>
    <string name="q13_2">Часто тяжесть в конечностях, спине или голове, утомляемость</string>
    <string name="next13">Далее</string>
    <string name="caption14">Генитальные симптомы</string>
    <string name="q14_1">Вероятно потеря либидо, менструальные сбои</string>
    <string name="q14_2">Достоверно потеря либидо, менструальные сбои</string>
    <string name="next14">Далее</string>
    <string name="caption15">Ипохондрия</string>
    <string name="q15_1">Самопоглощение (телесное)</string>
    <string name="q15_2">Озабоченность здоровьем</string>
    <string name="q15_3">Ворчание</string>
    <string name="q15_4">Ипохондрический бред</string>
    <string name="next15">Далее</string>
    <string name="caption16">Потеря веса</string>
    <string name="q16_1">Возможно потеря веса</string>
    <string name="q16_2">Заметная потеря веса</string>
    <string name="next16">Далее</string>
    <string name="caption17">Понимание</string>
    <string name="c17_1">Частичная или сомнительная потеря понимания</string>
    <string name="c17_2">Потеря понимания</string>
    <string name="next17">Далее</string>
    <string name="caption18">Суточный ход</string>
    <string name="q18_1">Иногда симптомы ухудшаются утром и вечером</string>
    <string name="q18_2">Часто симптомы ухудшаются утром и вечером</string>
    <string name="next18">Далее</string>
    <string name="caption19">Деперсонализация и дереализация</string>
    <string name="q19_1">Тривиальное чувство нереальности и нишилистические идеи</string>
    <string name="q19_2">Слобо выраженные чувство нереальности и нишилистические идеи</string>
    <string name="q19_3">Умеренные чувство нереальности и нишилистические идеи</string>
    <string name="q19_4">Тяжелые чувство нереальности и нишилистические идеи</string>
    <string name="next19">Далее</string>
    <string name="caption20">Параноидальные симптомы</string>
    <string name="q20_1">Подозрительность</string>
    <string name="q20_2">Идеи обращения</string>
    <string name="q20_3">Бредовые отношения</string>
    <string name="q20_4">Галлюцинации преследования</string>
    <string name="next20">Далее</string>
    <string name="caption21">Обсессивные симптомы</string>
    <string name="c21_1">Иногда навязчивые мысли и компульсии</string>
    <string name="c21_2">Часто навязчивые мысли и компульсии</string>
    <string name="next21">Далее</string>
    <string name="caption22">Результат</string>
    <string name="result">TextView</string>
    <string name="next22">Завершить</string>
</resources>