<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/caption2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/caption2"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <CheckBox
            android:id="@+id/c2_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/q2_1" />

        <CheckBox
            android:id="@+id/c2_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/q2_2" />

        <CheckBox
            android:id="@+id/c2_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/q2_3" />

        <CheckBox
            android:id="@+id/c2_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/q2_4" />

        <CheckBox
            android:id="@+id/c2_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/q2_5" />

        <Button
            android:id="@+id/next2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="sendMessage"
            android:text="@string/next2" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>