<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity11">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/caption11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/caption11"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <CheckBox
            android:id="@+id/c11_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q11_1" />

        <CheckBox
            android:id="@+id/c11_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q11_2" />

        <Button
            android:id="@+id/next11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="sendMessage"
            android:text="@string/next11" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>